--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <script src="index.js"></script>
 
 <body>
-  <textarea>
+  <textarea style="width:98vw;height:300px;">
 x=[1,2,3]
 y=[4,5,6]
   
 alert(AlgebraCalc("y**x"));
 // Expected: [4,25,216]
-  </textarea>
+  </textarea> <br>
   <button onclick="eval(this.previousElementSibling.value)">Test</button>
 </body>
 
